# wordle

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: .env.example  README.md  app.py  install.sh  pyproject.toml  requirements.txt  start.sh
backend/api/: create_endpoints.py  validator.py
backend/api/endpoints/: game_endpoint.py  user_endpoints.py
backend/automation/: daily_game_creation.py
backend/core/: __init__.py  database.py  game_repository.py  type_defs.py  user_repository.py  word_service.py
backend/database/: database.py
backend/database/model/: __init__.py  game.py  guess.py  user.py
frontend/: .prettierrc  README.md  middleware.ts  package-lock.json  package.json
frontend/app/: actions.ts  connection.ts  gameList.tsx  globals.css  helpers.ts  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/game/new/: actions.ts  page.tsx
frontend/app/admin/migrate/game/: actions.ts  page.tsx
frontend/app/admin/migrate/user/: actions.ts  page.tsx
frontend/app/admin/user/migration/: actions.ts  page.tsx
frontend/app/game/[gameId]/: actions.ts  commons.ts  guesses.tsx  page.tsx
frontend/app/game/current/: actions.ts  page.tsx
frontend/app/game/new/: actions.ts  page.tsx
frontend/app/login/: actions.ts  page.tsx
frontend/app/logout/: actions.ts  page.tsx
frontend/app/user/rename/: actions.ts  page.tsx
frontend/components/game/: GuessView.tsx  LetterCell.tsx  LetterInput.tsx  VirtualKeyboard.tsx
frontend/components/shared/: header.tsx
frontend/lib/: auth0.js
(+2 files in other folders)
